cmake_minimum_required(VERSION 3.10)

set(PROJECT_N src)
project(${PROJECT_N} VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(eigenlearning)
add_subdirectory(vector)
add_subdirectory(ref)
add_subdirectory(addressof)
add_subdirectory(align)
add_subdirectory(any)
add_subdirectory(time)
add_subdirectory(assert)
add_subdirectory(atomic)
add_subdirectory(auto)
add_subdirectory(backtrace)
add_subdirectory(boolalpha)
add_subdirectory(char)
add_subdirectory(chrnon)
add_subdirectory(class_template)
add_subdirectory(opencv)
add_subdirectory(graph)

if (CMAKE_HOST_WIN32)
elseif (CMAKE_HOST_APPLE)
elseif (CMAKE_HOST_UNIX)
add_subdirectory(apollo)
endif ()
# add_subdirectory(tcpcsvclient)
# add_subdirectory(tcpserver)

add_subdirectory(benchmark_learning)
