cmake_minimum_required(VERSION 3.10)

set(PROJECT_N src)
project(${PROJECT_N} VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_subdirectory(eigenlearning)
add_subdirectory(backtrace)
add_subdirectory(opencv)
add_subdirectory(graph)

if (CMAKE_HOST_WIN32)
elseif (CMAKE_HOST_APPLE)
elseif (CMAKE_HOST_UNIX)
# add_subdirectory(apollo)
add_subdirectory(tcpcsvclient)
add_subdirectory(tcpserver)
endif ()

add_subdirectory(benchmark_learning)
add_subdirectory(fastcsv)
add_subdirectory(udpbroadcast)
add_subdirectory(udpmulticast)
add_subdirectory(boost)
# add_subdirectory(OFM)
add_subdirectory(proxy)
add_subdirectory(select)
add_subdirectory(udpbroadcastrmf)
add_subdirectory(json)
add_subdirectory(dlopen)
add_subdirectory(DNS)
add_subdirectory(env)
add_subdirectory(getopt)
add_subdirectory(ifc)
add_subdirectory(inotify)
add_subdirectory(libevent)
add_subdirectory(netLink)
add_subdirectory(popen)
add_subdirectory(sscanf)
add_subdirectory(syslog)
add_subdirectory(cplusplus)
