cmake_minimum_required(VERSION 3.10)

set(PROJECT_N src)
project(${PROJECT_N} VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

# add_subdirectory(eigenlearning)
# add_subdirectory(backtrace)
# add_subdirectory(opencv)
# add_subdirectory(graph)
if (CMAKE_HOST_WIN32)
elseif (CMAKE_HOST_APPLE)
elseif (CMAKE_HOST_UNIX)
# add_subdirectory(apollo)
endif ()
# add_subdirectory(benchmark_learning)
# add_subdirectory(fastcsv)
# add_subdirectory(boost)
# add_subdirectory(OFM)
# add_subdirectory(json)
# add_subdirectory(getopt)
# add_subdirectory(inotify)
# add_subdirectory(libevent)
add_subdirectory(cplusplus)
# add_subdirectory(network)
# add_subdirectory(linux)
