cmake_minimum_required(VERSION 3.10)

set(PROJECT_N asio)
project(${PROJECT_N} VERSION 1.0)
add_compile_definitions(BOOST_ASIO_SEPARATE_COMPILATION)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)
link_libraries(pthread)
macro(BUILD curdir)
  file(GLOB children ${curdir}/*.cpp)
  foreach(child ${children})
  get_filename_component(FILENAME ${child} NAME_WE)
  add_executable(${FILENAME} ${child})
  target_link_libraries(${FILENAME} utils)
  endforeach()
endmacro()

BUILD(src)
