add_subdirectory("VisitorPattern")
add_subdirectory("FactoryPattern")
add_subdirectory("StrategyPattern")
add_subdirectory("DecoratorPattern")
add_subdirectory("ProxyPattern")
add_subdirectory("Facade")
add_subdirectory("ObserverPattern")
add_subdirectory("StatePattern")
add_subdirectory("CompositePattern")
add_subdirectory("SingletonPattern")